# picocas

./: .gitignore  .gitmodules  CLAUDE.md  GEMINI.md  README.md  SPEC.md  build_ecm.sh  limit_candidate_spec.md  load.m  makefile  makefile_tests  pico_technical_specs.md  picocas  picocas_blog.md  picocas_functional_blog.md  picocas_limits_blog.md  picocas_patterns_blog.md  picocas_series_blog.md  picocas_spec.md  plan_numerics.md  run_lldb.sh
notebook-tauri/: .gitignore  README.md  index.html  package-lock.json  package.json
notebook-tauri/src/: App.css  App.tsx
notebook-tauri/src-tauri/: Cargo.toml  tauri.conf.json
notebook-tauri/src-tauri/capabilities/: default.json
notebook-tauri/src-tauri/src/: commands.rs  lib.rs  main.rs  picocas.rs
notebook-tauri/src/components/: Cell.tsx  CellInput.tsx  CellOutput.tsx  CellToolbar.tsx  Notebook.tsx  PlotOutput.tsx  TextCell.tsx
notebook-tauri/src/hooks/: useNotebook.ts
notebook-tauri/src/lib/: mathRender.ts  picocasHighlight.ts
src/: arithmetic.c  arithmetic.h  attr.c  attr.h  boolean.c  boolean.h  comparisons.c  comparisons.h  complex.c  complex.h  cond.c  cond.h  context.c  context.h  core.c  core.h  datetime.c  datetime.h  default_helper.c  default_helper.h  deriv.c  deriv.h  eval.c  eval.h  expand.c  expand.h  expr.c  expr.h  facint.c  facint.h  facpoly.c  facpoly.h  funcprog.c  funcprog.h  hyperbolic.c  hyperbolic.h  info.c  info.h  internal.c  internal.h  (+71 more)
src/internal/: CRCMathTablesIntegrals.m  deriv.m  init.m  integrals.m
tests/: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  backtrack_tests  cmake_install.cmake  comparisons_tests  core_tests  datetime_tests  eval_tests  expand_tests  expr_tests  facpoly_tests  funcprog_through_tests  hyperbolic_tests  linalg_tests  list_tests  logexp_tests  match_extensive_tests  match_tests  modular_tests  parse_tests  piecewise_tests  poly_tests  purefunc_tests  regression_tests  replace_tests  sort_tests  split_tests  stats_tests  symtab_tests  test_arc_exact.c  test_assuming.c  test_backtrack.c  test_bigint.c  test_comparisons.c  test_cond.c  test_context.c  test_core.c  test_datetime.c  (+78 more)
