cmake_minimum_required(VERSION 3.10)
project(picocas_tests)

option(USE_ECM "Use ECM library for factorisation" ON)
option(USE_MPFR "Use MPFR for arbitrary-precision reals (N[expr, prec])" ON)

if(USE_MPFR)
    add_compile_definitions(USE_MPFR)
    link_libraries(mpfr)
endif()

include_directories(/usr/local/include)
if(USE_ECM)
    include_directories(../src/external/ecm)
endif()

if(EXISTS "/opt/homebrew/include")
    include_directories(/opt/homebrew/include)
endif()
link_directories(/usr/local/lib)
if(EXISTS "/opt/homebrew/lib")
    link_directories(/opt/homebrew/lib)
endif()

if(USE_ECM)
    add_custom_command(
        OUTPUT ${CMAKE_SOURCE_DIR}/../src/external/ecm/.libs/libecm.a
        COMMAND ./build_ecm.sh
        WORKING_DIRECTORY ${CMAKE_SOURCE_DIR}/..
        COMMENT "Building ECM library"
    )
    add_custom_target(build_ecm DEPENDS ${CMAKE_SOURCE_DIR}/../src/external/ecm/.libs/libecm.a)
    link_libraries(gmp m ${CMAKE_SOURCE_DIR}/../src/external/ecm/.libs/libecm.a)
else()
    add_compile_definitions(NO_ECM)
    link_libraries(gmp m)
endif()

set(COMMON_SRC
    ../src/expr.c
    ../src/parse.c
    ../src/eval.c
    ../src/internal.c
    ../src/attr.c
    ../src/core.c
    ../src/comparisons.c
    ../src/symtab.c
    ../src/match.c
    ../src/part.c
    ../src/print.c
    ../src/plus.c
    ../src/times.c
    ../src/arithmetic.c
    ../src/facint.c
    ../src/power.c
    ../src/funcprog.c
    ../src/boolean.c
    ../src/list.c
    ../src/patterns.c
    ../src/patterns.c
    ../src/replace.c
    ${CMAKE_SOURCE_DIR}/../src/simp.c
    ../src/complex.c
    ../src/trig.c
    ../src/hyperbolic.c
    ../src/logexp.c
    ../src/piecewise.c
    ../src/purefunc.c
    ../src/modular.c
    ../src/sort.c
    ../src/stats.c
    ../src/info.c
    ../src/expand.c
    ../src/poly.c
    ../src/rat.c
    ../src/facpoly.c
    ../src/parfrac.c
    ../src/datetime.c
    ../src/linalg.c
    ../src/load.c
    ../src/iter.c
    ../src/cond.c
    ../src/default_helper.c
    ../src/random.c
    ../src/picostrings.c
    ../src/series.c
    ../src/deriv.c
    ../src/limit.c
    ../src/context.c
    ../src/numeric.c
    ../src/precision.c
)

add_executable(expr_tests test_expr.c test_part.c ${COMMON_SRC})
target_include_directories(expr_tests PRIVATE ../src)

add_executable(parse_tests test_parse.c ${COMMON_SRC})
target_include_directories(parse_tests PRIVATE ../src)

add_executable(eval_tests test_eval.c ${COMMON_SRC})
target_include_directories(eval_tests PRIVATE ../src)

add_executable(match_tests test_match.c ${COMMON_SRC})
target_include_directories(match_tests PRIVATE ../src)

add_executable(match_extensive_tests test_match_extensive.c ${COMMON_SRC})
target_include_directories(match_extensive_tests PRIVATE ../src)

add_executable(symtab_tests test_symtab.c ${COMMON_SRC})
target_include_directories(symtab_tests PRIVATE ../src)

add_executable(regression_tests test_regression.c ${COMMON_SRC})
target_include_directories(regression_tests PRIVATE ../src)

add_executable(comparisons_tests test_comparisons.c ${COMMON_SRC})
target_include_directories(comparisons_tests PRIVATE ../src)

add_executable(list_tests test_list.c ${COMMON_SRC})
target_include_directories(list_tests PRIVATE ../src)

add_executable(iter_tests test_iter.c ${COMMON_SRC})
target_link_libraries(iter_tests m)
target_include_directories(iter_tests PRIVATE ../src)

add_executable(cond_tests test_cond.c ${COMMON_SRC})
target_link_libraries(cond_tests m)
target_include_directories(cond_tests PRIVATE ../src)

add_executable(patterns_tests test_patterns.c ${COMMON_SRC})
target_link_libraries(patterns_tests m)
target_include_directories(patterns_tests PRIVATE ../src)

add_executable(replace_tests test_replace.c
    ${CMAKE_SOURCE_DIR}/../src/simp.c ${COMMON_SRC})
target_include_directories(replace_tests PRIVATE ../src)

add_executable(core_tests test_core.c ${COMMON_SRC})
target_include_directories(core_tests PRIVATE ../src)

add_executable(trig_tests test_trig.c ${COMMON_SRC})
target_include_directories(trig_tests PRIVATE ../src)

add_executable(hyperbolic_tests test_hyperbolic.c ${COMMON_SRC})
target_include_directories(hyperbolic_tests PRIVATE ../src)

add_executable(logexp_tests test_logexp.c ${COMMON_SRC})
target_include_directories(logexp_tests PRIVATE ../src)

add_executable(piecewise_tests test_piecewise.c ${COMMON_SRC})
target_include_directories(piecewise_tests PRIVATE ../src)

add_executable(purefunc_tests test_purefunc.c ${COMMON_SRC})
target_include_directories(purefunc_tests PRIVATE ../src)

add_executable(modular_tests test_modular.c ${COMMON_SRC})
target_include_directories(modular_tests PRIVATE ../src)

add_executable(funcprog_through_tests test_funcprog_through.c ${COMMON_SRC})
target_include_directories(funcprog_through_tests PRIVATE ../src)

add_executable(mapat_tests test_mapat.c ${COMMON_SRC})
target_include_directories(mapat_tests PRIVATE ../src)

add_executable(replaceat_tests test_replaceat.c ${COMMON_SRC})
target_include_directories(replaceat_tests PRIVATE ../src)

add_executable(nest_tests test_nest.c ${COMMON_SRC})
target_include_directories(nest_tests PRIVATE ../src)

add_executable(nestlist_tests test_nestlist.c ${COMMON_SRC})
target_include_directories(nestlist_tests PRIVATE ../src)

add_executable(nestwhile_tests test_nestwhile.c ${COMMON_SRC})
target_include_directories(nestwhile_tests PRIVATE ../src)

add_executable(nestwhilelist_tests test_nestwhilelist.c ${COMMON_SRC})
target_include_directories(nestwhilelist_tests PRIVATE ../src)

add_executable(fixedpointlist_tests test_fixedpointlist.c ${COMMON_SRC})
target_include_directories(fixedpointlist_tests PRIVATE ../src)

add_executable(fixedpoint_tests test_fixedpoint.c ${COMMON_SRC})
target_include_directories(fixedpoint_tests PRIVATE ../src)

add_executable(fold_tests test_fold.c ${COMMON_SRC})
target_include_directories(fold_tests PRIVATE ../src)

add_executable(foldlist_tests test_foldlist.c ${COMMON_SRC})
target_include_directories(foldlist_tests PRIVATE ../src)

add_executable(split_tests test_split.c ${COMMON_SRC})
target_include_directories(split_tests PRIVATE ../src)

add_executable(sort_tests test_sort.c ${COMMON_SRC})
target_include_directories(sort_tests PRIVATE ../src)

add_executable(backtrack_tests test_backtrack.c ${COMMON_SRC})
target_include_directories(backtrack_tests PRIVATE ../src)

add_executable(poly_tests test_poly.c ${COMMON_SRC})
target_include_directories(poly_tests PRIVATE ../src)

add_executable(expand_tests test_expand.c ${COMMON_SRC})
target_include_directories(expand_tests PRIVATE ../src)

add_executable(stats_tests test_stats.c ${COMMON_SRC})
target_include_directories(stats_tests PRIVATE ../src)

add_executable(datetime_tests test_datetime.c ${COMMON_SRC})
target_include_directories(datetime_tests PRIVATE ../src)

add_executable(facpoly_tests test_facpoly.c ${COMMON_SRC})
target_include_directories(facpoly_tests PRIVATE ../src)

add_executable(rat_tests test_rat.c ${COMMON_SRC})
target_include_directories(rat_tests PRIVATE ../src)

add_executable(linalg_tests test_linalg.c ${COMMON_SRC})
target_include_directories(linalg_tests PRIVATE ../src)

add_executable(parfrac_tests test_parfrac.c ${COMMON_SRC})
target_include_directories(parfrac_tests PRIVATE ../src)

add_executable(polymod_tests test_polymod.c ${COMMON_SRC})
target_include_directories(polymod_tests PRIVATE ../src)

add_executable(bigint_tests test_bigint.c ${COMMON_SRC})
target_include_directories(bigint_tests PRIVATE ../src /usr/local/include)
target_link_directories(bigint_tests PRIVATE /usr/local/lib)
if(USE_ECM)
    target_link_libraries(bigint_tests gmp m ${CMAKE_SOURCE_DIR}/../src/external/ecm/.libs/libecm.a)
else()
    target_link_libraries(bigint_tests gmp m)
endif()

add_executable(integrals_tests test_integrals.c ${COMMON_SRC})
target_include_directories(integrals_tests PRIVATE ../src)
if(USE_ECM)
    target_link_libraries(integrals_tests gmp m ${CMAKE_SOURCE_DIR}/../src/external/ecm/.libs/libecm.a)
else()
    target_link_libraries(integrals_tests gmp m)
endif()

add_executable(print_tests test_print.c ${COMMON_SRC})
target_include_directories(print_tests PRIVATE ../src)

add_executable(context_tests test_context.c ${COMMON_SRC})
target_include_directories(context_tests PRIVATE ../src)

add_executable(list_set_tests test_list_set.c ${COMMON_SRC})
target_include_directories(list_set_tests PRIVATE ../src)

add_executable(random_tests test_random.c ${COMMON_SRC})
target_include_directories(random_tests PRIVATE ../src)

add_executable(evaluate_tests test_evaluate.c ${COMMON_SRC})
target_include_directories(evaluate_tests PRIVATE ../src)

add_executable(releasehold_tests test_releasehold.c ${COMMON_SRC})
target_include_directories(releasehold_tests PRIVATE ../src)

add_executable(unevaluated_tests test_unevaluated.c ${COMMON_SRC})
target_include_directories(unevaluated_tests PRIVATE ../src)

add_executable(strings_tests test_strings.c ${COMMON_SRC})
target_include_directories(strings_tests PRIVATE ../src)

add_executable(series_tests test_series.c ${COMMON_SRC})
target_include_directories(series_tests PRIVATE ../src)

add_executable(series_twoterm_tests test_series_twoterm.c ${COMMON_SRC})
target_include_directories(series_twoterm_tests PRIVATE ../src)

add_executable(deriv_tests test_deriv.c ${COMMON_SRC})
target_include_directories(deriv_tests PRIVATE ../src)

add_executable(limit_tests test_limit.c ${COMMON_SRC})
target_include_directories(limit_tests PRIVATE ../src)

add_executable(radical_fusion_tests test_radical_fusion.c ${COMMON_SRC})
target_include_directories(radical_fusion_tests PRIVATE ../src)

add_executable(infinity_tests test_infinity.c ${COMMON_SRC})
target_include_directories(infinity_tests PRIVATE ../src)

add_executable(increment_tests test_increment.c ${COMMON_SRC})
target_include_directories(increment_tests PRIVATE ../src)

add_executable(numeric_tests test_numeric.c ${COMMON_SRC})
target_include_directories(numeric_tests PRIVATE ../src)

if(USE_ECM)
    add_dependencies(expr_tests build_ecm)
    add_dependencies(parse_tests build_ecm)
    add_dependencies(eval_tests build_ecm)
    add_dependencies(match_tests build_ecm)
    add_dependencies(match_extensive_tests build_ecm)
    add_dependencies(symtab_tests build_ecm)
    add_dependencies(regression_tests build_ecm)
    add_dependencies(comparisons_tests build_ecm)
    add_dependencies(list_tests build_ecm)
    add_dependencies(iter_tests build_ecm)
    add_dependencies(cond_tests build_ecm)
    add_dependencies(patterns_tests build_ecm)
    add_dependencies(replace_tests build_ecm)
    add_dependencies(core_tests build_ecm)
    add_dependencies(trig_tests build_ecm)
    add_dependencies(hyperbolic_tests build_ecm)
    add_dependencies(logexp_tests build_ecm)
    add_dependencies(piecewise_tests build_ecm)
    add_dependencies(purefunc_tests build_ecm)
    add_dependencies(modular_tests build_ecm)
    add_dependencies(funcprog_through_tests build_ecm)
    add_dependencies(mapat_tests build_ecm)
    add_dependencies(replaceat_tests build_ecm)
    add_dependencies(nest_tests build_ecm)
    add_dependencies(nestlist_tests build_ecm)
    add_dependencies(nestwhile_tests build_ecm)
    add_dependencies(nestwhilelist_tests build_ecm)
    add_dependencies(fixedpointlist_tests build_ecm)
    add_dependencies(fixedpoint_tests build_ecm)
    add_dependencies(fold_tests build_ecm)
    add_dependencies(foldlist_tests build_ecm)
    add_dependencies(split_tests build_ecm)
    add_dependencies(sort_tests build_ecm)
    add_dependencies(backtrack_tests build_ecm)
    add_dependencies(poly_tests build_ecm)
    add_dependencies(expand_tests build_ecm)
    add_dependencies(stats_tests build_ecm)
    add_dependencies(datetime_tests build_ecm)
    add_dependencies(facpoly_tests build_ecm)
    add_dependencies(rat_tests build_ecm)
    add_dependencies(linalg_tests build_ecm)
    add_dependencies(parfrac_tests build_ecm)
    add_dependencies(polymod_tests build_ecm)
    add_dependencies(bigint_tests build_ecm)
    add_dependencies(integrals_tests build_ecm)
    add_dependencies(print_tests build_ecm)
    add_dependencies(random_tests build_ecm)
    add_dependencies(evaluate_tests build_ecm)
    add_dependencies(releasehold_tests build_ecm)
    add_dependencies(unevaluated_tests build_ecm)
    add_dependencies(strings_tests build_ecm)
    add_dependencies(series_tests build_ecm)
    add_dependencies(series_twoterm_tests build_ecm)
    add_dependencies(deriv_tests build_ecm)
    add_dependencies(limit_tests build_ecm)
    add_dependencies(radical_fusion_tests build_ecm)
    add_dependencies(infinity_tests build_ecm)
    add_dependencies(increment_tests build_ecm)
    add_dependencies(numeric_tests build_ecm)
endif()

add_executable(simp_tests test_simp.c ${COMMON_SRC})
target_include_directories(simp_tests PRIVATE ../src)
if(USE_ECM)
    target_link_libraries(simp_tests gmp m ${CMAKE_SOURCE_DIR}/../src/external/ecm/.libs/libecm.a)
else()
    target_link_libraries(simp_tests gmp m)
endif()
add_test(NAME simp_tests COMMAND simp_tests)

add_executable(distribute_tests test_distribute.c ${COMMON_SRC})
target_include_directories(distribute_tests PRIVATE ../src)
if(USE_ECM)
    target_link_libraries(distribute_tests gmp m ${CMAKE_SOURCE_DIR}/../src/external/ecm/.libs/libecm.a)
else()
    target_link_libraries(distribute_tests gmp m)
endif()
add_test(NAME distribute_tests COMMAND distribute_tests)
